--- a/SalesRazorPageApp/Pages/Products/Index.cshtml
+++ b/SalesRazorPageApp/Pages/Products/Index.cshtml
@@ -4,59 +4,139 @@
 @{
     ViewData["Title"] = "Products";
     Layout = "~/Pages/Shared/_AdminLayout.cshtml";
+
+    int pageNumber = Model.PageNumber;
+    int pageSize = Model.PageSize;
+
+    string actionPath = $@"/products?page={pageNumber}&pageSize={pageSize}";
 }
 
-<h1>Products</h1>
+<div class="">
+    <div class="total_pages" hidden>@Model.PagedResult.TotalPages</div>
+    <div class="current_page" hidden>@Model.PageNumber</div>
+    <h1>Products</h1>
 
-<p style="display: flex;justify-content: flex-end;">
-    <button class="btn btn-outline-secondary" type="button" onclick="location.href='/products/create'">Create new</button>
-</p>
-<table class="table table-hover text-center">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Product[0].ProductName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Product[0].Weight)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Product[0].UnitPrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Product[0].UnitsInStock)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Product[0].Category)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Product)
-        {
+    <p style="display: flex;justify-content: flex-end;">
+        <button class="btn btn-outline-secondary" type="button" onclick="location.href='/products/create'">Create
+            new</button>
+    </p>
+
+    <form action="@actionPath" class="input-group mb-3" style="margin-block: 10px;" method="get">
+        <span class="input-group-text" id="inputGroup-sizing-default"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+            </svg></span>
+        <input type="text" value="@ViewBag.keyword" name="keyword" placeholder="Enter product name..."
+            class="form-control" />
+        <button class="btn btn-primary" type="submit">Search</button>
+    </form>
+
+    <table class="table table-hover text-center">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ProductName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Weight)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UnitPrice)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UnitsInStock)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Category.CategoryName)
-                </td>
-                <td>
-                    <a class="btn btn-outline-primary" asp-page="./Edit" asp-route-id="@item.ProductId">Edit</a> |
-                    <a class="btn btn-outline-dark" asp-page="./Details" asp-route-id="@item.ProductId">Details</a> |
-                    <a class="btn btn-outline-danger" asp-page="./Delete" asp-route-id="@item.ProductId">Delete</a>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Product[0].ProductName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Product[0].Weight)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Product[0].UnitPrice)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Product[0].UnitsInStock)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Product[0].Category)
+                </th>
+                <th></th>
             </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Product)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ProductName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Weight)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UnitPrice)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UnitsInStock)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Category.CategoryName)
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-primary" asp-page="./Edit" asp-route-id="@item.ProductId">Edit</a> |
+                        <a class="btn btn-outline-dark" asp-page="./Details" asp-route-id="@item.ProductId">Details</a> |
+                        <a class="btn btn-outline-danger" asp-page="./Delete" asp-route-id="@item.ProductId">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+    <nav aria-label="Page navigation example" style="margin-top: 50px;">
+        <ul class="pagination">
+            <li class="page-item prev_btn">
+                <button class="page-link" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </button>
+            </li>
+            @for (int pageCnt = 1; pageCnt <= Model.PagedResult.TotalPages; ++pageCnt)
+            {
+                @if (pageCnt == Model.PagedResult.PageNumber)
+                {
+                    <li class="page-item active">
+                        <a class="page-link" href="/products?page=@pageCnt&keyword=@ViewBag.keyword">@pageCnt</a>
+                    </li>
+                }
+                else
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="/products?page=@pageCnt&keyword=@ViewBag.keyword">@pageCnt</a>
+                    </li>
+
+                }
+            }
+            <li class="page-item next_btn">
+                <button class="page-link" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </button>
+            </li>
+        </ul>
+    </nav>
+</div>
+
+
+<script>
+    let prev_btn = document.querySelector('.prev_btn');
+    prev_btn.addEventListener('click', () => {
+        let total_pages = document.querySelector('.total_pages').textContent;
+        let current_page = parseInt(document.querySelector('.current_page').textContent);
+        let keyword = document.querySelector('input[name="keyword"]').value;
+        if (current_page > 1) {
+            window.location.href = `/products?page=${current_page - 1}&keyword=${keyword}`;
+        } else {
+            window.location.href = `/products?page=${total_pages}&keyword=${keyword}`
         }
-    </tbody>
-</table>
+    });
+
+    let next_btn = document.querySelector('.next_btn');
+    next_btn.addEventListener('click', () => {
+        let total_pages = document.querySelector('.total_pages').textContent;
+        let current_page = parseInt(document.querySelector('.current_page').textContent);
+        let keyword = document.querySelector('input[name="keyword"]').value;
+        if (current_page < total_pages) {
+            window.location.href = `/products?page=${current_page + 1}&keyword=${keyword}`;
+        } else {
+            window.location.href = `/products?page=1&keyword=${keyword}`
+        }
+    });
+</script>
