--- a/SalesRazorPageApp/Pages/Shared/_AdminLayout.cshtml
+++ b/SalesRazorPageApp/Pages/Shared/_AdminLayout.cshtml
@@ -32,7 +32,7 @@
                 <a href="/admin" class="admin_nav_link list-group-item list-group-item-action bg-light">Dashboard</a>
                 <a href="/products" class="admin_nav_link list-group-item list-group-item-action bg-light">Products</a>
                 <a href="/orders" class="admin_nav_link list-group-item list-group-item-action bg-light">Orders</a>
-                <a href="/members" class="admin_nav_link list-group-item list-group-item-action bg-light">Users</a>
+                <a href="/members" class="admin_nav_link list-group-item list-group-item-action bg-light">Members</a>
                 <!-- Add more links as needed -->
             </div>
         </div>
