--- a/SalesRazorPageApp/Pages/Shared/_Layout.cshtml
+++ b/SalesRazorPageApp/Pages/Shared/_Layout.cshtml
@@ -18,6 +18,9 @@
 
     @*bootstrap icon*@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+
+
+    <link rel="stylesheet" href="~/Pages/Cart/@(nameof(SalesRazorPageApp.Pages.Cart.Index)).cshtml.css"/>
 </head>
 
 <body>
