--- a/SalesRazorPageApp/Pages/Shared/_Layout.cshtml
+++ b/SalesRazorPageApp/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var memberId = Context.Session.GetString("memberId");
+    var role = Context.Session.GetString("role");
+    bool isAuthenticated = !string.IsNullOrEmpty(memberId) || role == "Admin";
+}
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -19,8 +25,8 @@
     @*bootstrap icon*@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
-
-    <link rel="stylesheet" href="~/Pages/Cart/@(nameof(SalesRazorPageApp.Pages.Cart.Index)).cshtml.css"/>
+@* 
+    <link rel="stylesheet" href="~/Pages/Cart/@(nameof(SalesRazorPageApp.Pages.Cart.Index)).cshtml.css" /> *@
 </head>
 
 <body>
@@ -41,34 +47,31 @@
                         <li class="nav-item">
                             <a class="nav-link" href="">Link</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="">Action</a></li>
-                                <li><a class="dropdown-item" href="">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                        </li>
+                        @if (isAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="/signout">Sign Out</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="/login">Sign In</a>
+                            </li>
+                        }
                     </ul>
-                    <div class="position-relative" style="margin-inline: 2rem;cursor: pointer">
+                    <div class="position-relative" onclick="location.href='/cart'"
+                        style="margin-inline: 2rem;cursor: pointer">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-cart" viewBox="0 0 16 16">
                             <path
                                 d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
                         </svg>
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                            1
-                            <span class="visually-hidden">unread messages</span>
-                        </span>
+                        @* <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill
+                        bg-danger">
+                        1
+                        <span class="visually-hidden">unread messages</span>
+                        </span> *@
                     </div>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -89,6 +92,9 @@
             &copy; 2024 - SalesRazorPageApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
+
+    @*sweetalert2*@
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
