--- a/SalesRazorPageApp/Pages/Cart/Index.cshtml
+++ b/SalesRazorPageApp/Pages/Cart/Index.cshtml
@@ -1,159 +1,157 @@
 @page
+@attribute [SessionAuthorize]
 @model SalesRazorPageApp.Pages.Cart.Index
 @{
     ViewData["Title"] = "Cart";
+    var memberId = HttpContext.Session.GetString("memberId");
+    bool isValidOrder = Model.Order.OrderDetails.Count > 0;
 }
+
+<style>
+    .cart-container {
+        border: 1px solid rgba(0, 0, 0, 0.05);
+        padding: 20px;
+    }
+
+    .cart-container .cart-body {
+        border-top: 1px solid rgba(0, 0, 0, 0.05);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+        padding: 30px 0 20px;
+        margin: 20px 0 30px;
+    }
+</style>
 
 <h1 class="text-center">Your cart</h1>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" />
 
-<div class="">
-    <div class="contentbar">
-        <!-- Start row -->
-        <div class="row">
-            <!-- Start col -->
-            <div class="col-md-12 col-lg-12 col-xl-12">
-                <div class=" m-b-30">
-                    <div class="card-body">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-10 col-xl-8">
-                                <div class="cart-container">
-                                    <div class="cart-head">
-                                        <div class="table-responsive">
-                                            <table class="table table-borderless">
-                                                <thead>
-                                                    <tr>
-                                                        <th scope="col">#</th>
-                                                        <th scope="col">Action</th>
-                                                        <th scope="col">Photo</th>
-                                                        <th scope="col">Product</th>
-                                                        <th scope="col">Quantity</th>
-                                                        <th scope="col">Price</th>
-                                                        <th scope="col" class="text-right">Total</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <th scope="row">1</th>
-                                                        <td><a href="#" class="text-danger"><i
-                                                                    class="ri-delete-bin-3-line"></i></a></td>
-                                                        <td><img src="https://themesbox.in/admin-templates/olian/html/light-vertical/assets/images/ecommerce/product_01.svg"
-                                                                class="img-fluid" width="35" alt="product"></td>
-                                                        <td>Apple Watch</td>
-                                                        <td>
-                                                            <div class="form-group mb-0">
-                                                                <input type="number" class="form-control cart-qty"
-                                                                    name="cartQty1" id="cartQty1" value="1">
-                                                            </div>
-                                                        </td>
-                                                        <td>$10</td>
-                                                        <td class="text-right">$500</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">2</th>
-                                                        <td><a href="#" class="text-danger"><i
-                                                                    class="ri-delete-bin-3-line"></i></a></td>
-                                                        <td><img src="https://themesbox.in/admin-templates/olian/html/light-vertical/assets/images/ecommerce/product_02.svg"
-                                                                class="img-fluid" width="35" alt="product"></td>
-                                                        <td>Apple iPhone</td>
-                                                        <td>
-                                                            <div class="form-group mb-0">
-                                                                <input type="number" class="form-control cart-qty"
-                                                                    name="cartQty2" id="cartQty2" value="1">
-                                                            </div>
-                                                        </td>
-                                                        <td>$20</td>
-                                                        <td class="text-right">$200</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">3</th>
-                                                        <td><a href="#" class="text-danger"><i
-                                                                    class="ri-delete-bin-3-line"></i></a></td>
-                                                        <td><img src="https://themesbox.in/admin-templates/olian/html/light-vertical/assets/images/ecommerce/product_03.svg"
-                                                                class="img-fluid" width="35" alt="product"></td>
-                                                        <td>Apple iPad</td>
-                                                        <td>
-                                                            <div class="form-group mb-0">
-                                                                <input type="number" class="form-control cart-qty"
-                                                                    name="cartQty3" id="cartQty3" value="1">
-                                                            </div>
-                                                        </td>
-                                                        <td>$30</td>
-                                                        <td class="text-right">$300</td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                    <div class="cart-body">
-                                        <div class="row">
-                                            <div class="col-md-12 order-2 order-lg-1 col-lg-5 col-xl-6">
-                                                @* <div class="order-note">
-                                                    <form>
-                                                        <div class="form-group">
-                                                            <div class="input-group">
-                                                                <input type="search" class="form-control"
-                                                                    placeholder="Coupon Code" aria-label="Search"
-                                                                    aria-describedby="button-addonTags">
-                                                                <div class="input-group-append">
-                                                                    <button class="input-group-text" type="submit"
-                                                                        id="button-addonTags">Apply</button>
+<div class="contentbar">
+    <div class="memberId" hidden>@memberId</div>
+    <input type="hidden" name="orderId" value="@Model.Order.OrderId" />
+    <!-- Start row -->
+    <div class="row">
+        <!-- Start col -->
+        <div class="col-md-12 col-lg-12 col-xl-12">
+            <div class=" m-b-30">
+                <div class="card-body">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-10 col-xl-8">
+                            <div class="cart-container">
+                                <div class="cart-head">
+                                    <div class="table-responsive">
+                                        <table class="table table-borderless">
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">#</th>
+                                                    <th scope="col">Action</th>
+                                                    <th scope="col">Product</th>
+                                                    <th scope="col">Quantity</th>
+                                                    <th scope="col">Price</th>
+                                                    <th scope="col" class="text-right">Total</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                @if (Model.Order.OrderDetails.Count > 0)
+                                                {
+                                                    int cnt = 1;
+                                                    @foreach (var orderDetail in Model.Order.OrderDetails)
+                                                    {
+                                                        <tr>
+                                                            <th scope="row">@cnt</th>
+                                                            <td><a href="" class="text-danger delete_cart_btn"
+                                                                    product_id="@orderDetail.ProductId"><i
+                                                                        class="ri-delete-bin-3-line"></i></a></td>
+
+                                                            <td>@orderDetail.Product.ProductName</td>
+                                                            <td>
+                                                                <div class="form-group mb-0">
+                                                                    <input type="number" class="form-control cart-qty"
+                                                                        product_id="@orderDetail.ProductId" name="cartQty1"
+                                                                        id="cartQty1" value="@orderDetail.Quantity">
                                                                 </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="form-group">
-                                                            <label for="specialNotes">Special Note for this
-                                                                order:</label>
-                                                            <textarea class="form-control" name="specialNotes"
-                                                                id="specialNotes" rows="3"
-                                                                placeholder="Message here"></textarea>
-                                                        </div>
-                                                    </form>
-                                                </div> *@
+                                                            </td>
+                                                            <td>$@orderDetail.Product.UnitPrice</td>
+                                                            <td class="text-right">$@orderDetail.UnitPrice</td>
+                                                        </tr>
+                                                        ++cnt;
+                                                    }
+                                                }
+                                                else
+                                                {
+                                                    <tr class="text-center">The cart is empty</tr>
+                                                }
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="cart-body">
+                                    <div class="row">
+                                        <div class="col-md-12 order-2 order-lg-1 col-lg-5 col-xl-6">
+                                            @* <div class="order-note">
+                                            <form>
+                                            <div class="form-group">
+                                            <div class="input-group">
+                                            <input type="search" class="form-control"
+                                            placeholder="Coupon Code" aria-label="Search"
+                                            aria-describedby="button-addonTags">
+                                            <div class="input-group-append">
+                                            <button class="input-group-text" type="submit"
+                                            id="button-addonTags">Apply</button>
                                             </div>
-                                            <div class="col-md-12 order-1 order-lg-2 col-lg-7 col-xl-6">
-                                                <div class="order-total table-responsive ">
-                                                    <table class="table table-borderless text-right">
-                                                        <tbody>
-                                                            <tr>
-                                                                <td>Sub Total :</td>
-                                                                <td>$1000.00</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Shipping :</td>
-                                                                <td>$0.00</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Tax(18%) :</td>
-                                                                <td>$180.00</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td class="f-w-7 font-18">
-                                                                    <h4>Amount :</h4>
-                                                                </td>
-                                                                <td class="f-w-7 font-18">
-                                                                    <h4>$1180.00</h4>
-                                                                </td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </div>
+                                            </div>
+                                            </div>
+                                            <div class="form-group">
+                                            <label for="specialNotes">Special Note for this
+                                            order:</label>
+                                            <textarea class="form-control" name="specialNotes"
+                                            id="specialNotes" rows="3"
+                                            placeholder="Message here"></textarea>
+                                            </div>
+                                            </form>
+                                            </div> *@
+                                        </div>
+                                        <div class="col-md-12 order-1 order-lg-2 col-lg-7 col-xl-6">
+                                            <div class="order-total table-responsive ">
+                                                <table class="table table-borderless text-right">
+                                                    <tbody>
+                                                        <tr>
+                                                            <td>Discount :</td>
+                                                            <td>$0</td>
+                                                        </tr>
+                                                        @* <tr>
+                                                        <td>Shipping :</td>
+                                                        <td>$0.00</td>
+                                                        </tr> *@
+                                                        <tr style="color: red;">
+                                                            <td class="f-w-7 font-18">
+                                                                <h4>Total :</h4>
+                                                            </td>
+                                                            <td class="f-w-7 font-18">
+                                                                <h4>@Model.Order.Freight</h4>
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="cart-footer text-right" style="display: flex;justify-content: space-between;">
-                                        <a href="" class="btn btn-primary my-1">Go back to shopping</a>
-                                        <a href="" class="btn btn-success my-1">Confirm Order</a>
-                                    </div>
+                                </div>
+                                <div class="cart-footer text-right"
+                                    style="display: flex;justify-content: space-between;">
+                                    <a href="" class="btn btn-primary my-1">Go back to shopping</a>
+                                    <a href="" class="btn btn-success my-1 confirm_order_btn" 
+                                    @(isValidOrder ? "" : "hidden")>Confirm Order</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- End col -->
         </div>
-        <!-- End row -->
+        <!-- End col -->
     </div>
+    <!-- End row -->
 </div>
+
+
+<script src="~/js/cart.js"></script>
