--- a/SalesRazorPageApp/Pages/_ViewImports.cshtml
+++ b/SalesRazorPageApp/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SalesRazorPageApp
 @namespace SalesRazorPageApp.Pages
+@using SalesRazorPageApp.Attributes
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
