--- a/SalesRazorPageApp/Pages/Admin/Index.cshtml
+++ b/SalesRazorPageApp/Pages/Admin/Index.cshtml
@@ -1,4 +1,5 @@
 @page
+@attribute [SessionAuthorize(Roles = ["Admin"])]
 @model SalesRazorPageApp.Pages.Admin.Index
 @{
   ViewData["Title"] = "Admin Page";
@@ -8,30 +9,31 @@
 <h1>@ViewData["Title"]</h1>
 
 <div>
-  <canvas id="myChart"></canvas>
+  <canvas id="myChart" width="400" height="400"></canvas>
 </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-  const ctx = document.getElementById('myChart');
+<script src="~/js/adminChart.js"></script>
+@* <script>
+const ctx = document.getElementById('myChart');
 
-  new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-      datasets: [{
-        label: '# of Votes',
-        data: [12, 19, 3, 5, 2, 3],
-        borderWidth: 1
-      }]
-    },
-    options: {
-      scales: {
-        y: {
-          beginAtZero: true
-        }
-      }
-    }
-  });
-</script>
+new Chart(ctx, {
+type: 'bar',
+data: {
+labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+datasets: [{
+label: '# of Votes',
+data: [12, 19, 3, 5, 2, 3],
+borderWidth: 1
+}]
+},
+options: {
+scales: {
+y: {
+beginAtZero: true
+}
+}
+}
+});
+</script> *@
