--- a/SalesRazorPageApp/Pages/Cart/Index.cshtml
+++ b/SalesRazorPageApp/Pages/Cart/Index.cshtml
@@ -50,7 +50,7 @@
                                                     <th scope="col" class="text-right">Total</th>
                                                 </tr>
                                             </thead>
-                                            <tbody>
+                                            <tbody class="cart_content">
                                                 @if (Model.Order.OrderDetails.Count > 0)
                                                 {
                                                     int cnt = 1;
@@ -127,7 +127,7 @@
                                                                 <h4>Total :</h4>
                                                             </td>
                                                             <td class="f-w-7 font-18">
-                                                                <h4>@Model.Order.Freight</h4>
+                                                                <h4 class="order_total">@Model.Order.Freight</h4>
                                                             </td>
                                                         </tr>
                                                     </tbody>
