--- a/SalesRazorPageApp/Pages/Orders/Index.cshtml
+++ b/SalesRazorPageApp/Pages/Orders/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@attribute [SessionAuthorize(Roles = ["Admin"])]
+@attribute [SessionAuthorize]
 @model SalesRazorPageApp.Pages.Orders.IndexModel
 
 @{
