--- a/SalesRazorPageApp/Pages/Cart/Index.cshtml
+++ b/SalesRazorPageApp/Pages/Cart/Index.cshtml
@@ -127,7 +127,7 @@
                                                                 <h4>Total :</h4>
                                                             </td>
                                                             <td class="f-w-7 font-18">
-                                                                <h4 class="order_total">@Model.Order.Freight</h4>
+                                                                <h4 class="order_total_content">@Model.Order.Freight</h4>
                                                             </td>
                                                         </tr>
                                                     </tbody>
