--- a/SalesRazorPageApp/Pages/Shared/_Layout.cshtml
+++ b/SalesRazorPageApp/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
     @*bootstrap icon*@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
-@* 
+    @*
     <link rel="stylesheet" href="~/Pages/Cart/@(nameof(SalesRazorPageApp.Pages.Cart.Index)).cshtml.css" /> *@
 </head>
 
@@ -42,10 +42,11 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/products">Products</a>
+                            <a class="nav-link active" aria-current="page" href=@(role == "Admin" ? "/products":
+                                "/products/list")>Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Link</a>
+                            <a class="nav-link" href="/members/profile">Profile</a>
                         </li>
                         @if (isAuthenticated)
                         {
