--- a/SalesRazorPageApp/Pages/Products/List.cshtml
+++ b/SalesRazorPageApp/Pages/Products/List.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="modal-body">
                 <div class="form-floating">
-                    <input type="number" class="form-control" name="quantity" id="cartQuantity"/>
+                    <input type="number" class="form-control" name="quantity" id="cartQuantity" />
                     <label for="cartQuantity">Quantity</label>
                 </div>
             </div>
@@ -36,16 +36,35 @@
 <div class="total_pages" hidden>@Model.PagedResult.TotalPages</div>
 <div class="current_page" hidden>@Model.PageNumber</div>
 
-<form action="@actionPath" class="input-group mb-3" style="margin-block: 10px;" method="get">
-    <span class="input-group-text" id="inputGroup-sizing-default"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-            height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-            <path
-                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
-        </svg></span>
-    <input type="text" value="@ViewBag.keyword" name="keyword" placeholder="Enter product name..."
-        class="form-control" />
-    <button class="btn btn-primary" type="submit">Search</button>
+<form action="@actionPath" class="" style="margin-block: 10px;" method="get">
+    <div class="input-group mb-3">
+        <span class="input-group-text" id="inputGroup-sizing-default"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+            </svg></span>
+        <input type="text" value="@TempData["Keyword"]" name="keyword" placeholder="Enter product name..."
+            class="form-control" />
+    </div>
+
+    <br />
+    <div class="" style="width: 30%;">
+        <div class="form-floating mb-3">
+            <input type="number" class="form-control" name="startPrice" value="@TempData["startPrice"]" id="startPrice"
+                placeholder="Start price">
+            <label for="startPrice">Start price</label>
+        </div>
+        <div class="form-floating">
+            <input type="number" class="form-control" name="endPrice" value="@TempData["endPrice"]" id="endPrice"
+                placeholder="End price">
+            <label for="endPrice">End price</label>
+        </div>
+    </div>
+
+    <button class="btn btn-primary mt-2" type="submit">Search</button>
 </form>
+
+<a href="/products/list">Clear filter</a>
 
 @if (Model.Products.Count > 0)
 {
@@ -58,8 +77,8 @@
                     <p class="" style="font-size: large;">@product.UnitPrice VNĐ</p>
                     <div class="">
                         <a href="/products/details?id=@product.ProductId" class="btn btn-outline-primary">Details</a>
-                        <button type="button" product_id="@product.ProductId" 
-                        class="btn btn-success add_to_cart_btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Add
+                        <button type="button" product_id="@product.ProductId" class="btn btn-success add_to_cart_btn"
+                            data-bs-toggle="modal" data-bs-target="#exampleModal">Add
                             to cart</button>
                     </div>
                 </div>
@@ -85,13 +104,13 @@ else
             @if (pageCnt == Model.PagedResult.PageNumber)
             {
                 <li class="page-item active">
-                    <a class="page-link" href="/products/list?page=@pageCnt&keyword=@ViewBag.keyword">@pageCnt</a>
+                    <a class="page-link" href="/products/list?page=@pageCnt&keyword=@TempData["Keyword"]">@pageCnt</a>
                 </li>
             }
             else
             {
                 <li class="page-item">
-                    <a class="page-link" href="/products/list?page=@pageCnt&keyword=@ViewBag.keyword">@pageCnt</a>
+                    <a class="page-link" href="/products/list?page=@pageCnt&keyword=@TempData["Keyword"]">@pageCnt</a>
                 </li>
 
             }
@@ -110,10 +129,12 @@ else
         let total_pages = document.querySelector('.total_pages').textContent;
         let current_page = parseInt(document.querySelector('.current_page').textContent);
         let keyword = document.querySelector('input[name="keyword"]').value;
+        let startPrice = document.querySelector('input[name="startPrice"]').value;
+        let endPrice = document.querySelector('input[name="endPrice"]').value;
         if (current_page > 1) {
-            window.location.href = `/products/list?page=${current_page - 1}&keyword=${keyword}`;
+            window.location.href = `/products/list?page=${current_page - 1}&keyword=${keyword}&startPrice=${startPrice}&endPrice=${endPrice}`;
         } else {
-            window.location.href = `/products/list?page=${total_pages}&keyword=${keyword}`
+            window.location.href = `/products/list?page=${total_pages}&keyword=${keyword}&startPrice=${startPrice}&endPrice=${endPrice}`
         }
     });
 
@@ -122,10 +143,12 @@ else
         let total_pages = document.querySelector('.total_pages').textContent;
         let current_page = parseInt(document.querySelector('.current_page').textContent);
         let keyword = document.querySelector('input[name="keyword"]').value;
+        let startPrice = document.querySelector('input[name="startPrice"]').value;
+        let endPrice = document.querySelector('input[name="endPrice"]').value;
         if (current_page < total_pages) {
-            window.location.href = `/products/list?page=${current_page + 1}&keyword=${keyword}`;
+            window.location.href = `/products/list?page=${current_page + 1}&keyword=${keyword}&startPrice=${startPrice}&endPrice=${endPrice}`;
         } else {
-            window.location.href = `/products/list?page=1&keyword=${keyword}`
+            window.location.href = `/products/list?page=1&keyword=${keyword}&startPrice=${startPrice}&endPrice=${endPrice}`
         }
     });
 </script>
